Cocoa: Don't beep on maximize.

Use zoom instead of performZoom: Does not beep if
there is no Zoom button, and is what Qt 4 did.

Task-number: QTBUG-37716
Change-Id: Iaa85d55a449744c38b260cf79745a433e0e3272f
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>